--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,18 @@
 @import url('./containers.css');
+@import url('./tables.css');
+@import url('./forms.css');
+@import url('./box.css');
+@import url('./buttons.css');
 @import url('./header.css');
+@import url('./footer.css');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Archivo', sans-serif;
+    font-weight: 400;
+    overflow-x: hidden;
 }
 
 .w-100 {
@@ -15,24 +23,35 @@
     background-color: rgb(65, 107, 145);
 }
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    height: 2vw;
-}
-
-.footer>img {
-    width: 4em;
-}
-
-.footer>h4 {
-    margin-left: 2em;
-}
-
 .about>div {
-    width: 30vw;
+    width: 40vw;
 }
 
-body {
-    height: 101vh;
+.title {
+    margin: 1em;
+}
+
+.main {
+    font-size: 50px;
+}
+
+.category {
+    margin-bottom: 2em;
+    height: fit-content;
+}
+
+.api-text {
+    width: 50%;
+}
+
+.bigger {
+    font-size: x-large;
+}
+
+.token-title {
+    margin-top: 1em;
+}
+
+.info {
+    margin: auto;
 }
