--- a/src/styles/containers.css
+++ b/src/styles/containers.css
@@ -5,6 +5,13 @@
     align-items: center;
 }
 
+.flex-column-space {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .flex-start {
     display: flex;
     flex-direction: column;
