--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,14 +1,3 @@
-.btn {
-    margin: 1em;
-    border: 0;
-    border-radius: 10px;
-    padding: .5em 1em;
-    background-color: rgb(92, 175, 92);
-    font-weight: bold;
-    cursor: pointer;
-    transition: 1s;
-}
-
 .submit {
     margin: 1em auto;
 }
@@ -25,6 +14,12 @@
     color: rgb(64, 167, 69);
     resize: none;
 
+}
+
+.token {
+    background-color: rgb(22, 21, 21);
+    color: rgb(215, 218, 64);
+    resize: none;
 }
 
 .prop-title {
