--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,22 +12,23 @@
     text-wrap: wrap;
 }
 
-.header>h2,
-img {
+.header>h2 {
     margin: 1em 3em;
+    font-weight: 800;
 }
 
 .img:hover {
     cursor: pointer;
 }
 
-.logoff:hover {
+.text-hover:hover {
     cursor: pointer;
-    text-shadow: 0px 0px 2px rgb(255, 255, 255);
+    text-shadow: 0px 0px 8px rgb(255, 255, 255);
     transition: 1s;
 }
 
-.logoff {
+.text-hover {
+    text-shadow: 0px 0px 2px rgb(255, 255, 255);
     transition: 1s;
 }
 
@@ -36,7 +37,6 @@ img {
     left: 1em;
 }
 
-#stamp {
-    position: absolute;
-    right: 2em;
+.logo {
+    margin: 4em;
 }
